# steuermann-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.override.yml.example  docker-compose.yml  frontend-refactor.md  pyproject.toml
backend/: attachments.py  auth.py  circuit_breaker.py  db.py  fastapi_app.py  llm_capability_probe.py  prometheus_client.py  rate_limit.py  secrets.py  single_user.py  version.py
backend/routers/: admin_users.py  analytics.py  auth.py  chat.py  conversations.py  dreaming.py  memories.py  metrics.py  rag_search.py  settings.py  workspace.py
config/: agents.yaml  core.yaml  features.yaml  tools.yaml
config/contracts/: cli_contract.yaml
config/profiles/: bundle_manifest.yaml
config/prompts/: en.yaml
docker/: Dockerfile.fastapi  Dockerfile.ingestion  Dockerfile.langgraph  Dockerfile.nextjs
docs/: cli.md  configuration.md  crewai_extension_guide.md  deployment_guide.md  design_system_directive.md  index.md  ingestion.md  monitoring.md  performance_optimization.md  profile_creation.md  quickstart.md  technical_architecture.md  tool_development_guide.md  tools.md  troubleshooting.md
frontend/: .env.example  .gitignore  eslint.config.mjs  jest.config.js  jest.setup.ts  layout-sketch.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: proxy.ts
monitoring/: alerts.yml  prometheus.yml
tests/: conftest.py  test_adapter_circuit_breaker.py  test_admin_users_router.py  test_analytics.py  test_analytics_crew.py  test_analyze_chart_tool.py  test_analyze_document_tool.py  test_analyze_image_tool.py  test_auth_router.py  test_auto_title.py  test_cache_compression.py  test_cache_eviction.py  test_cache_performance_benchmark.py  test_cache_performance_regression.py  test_cache_scheduler.py  test_cache_warming.py  test_caching.py  test_chat_attachment_manager.py  test_chat_router.py  test_checkpointing.py  test_code_generation_crew.py  test_compact_endpoint.py  test_compress_state.py  test_config_loader.py  test_conversation_attachments_store.py  test_conversations.py  test_crew_deep_integration.py  test_crew_result_caching.py  test_crew_spec_factory.py  test_csv_analyze_tool.py  test_datetime_tool.py  test_docker_compose_ingestion_env.py  test_dreaming_engine.py  test_dreaming_hitl_router.py  test_dreaming_stores.py  test_embedding_config_loading.py  test_exact_reply_directive.py  test_graph.py  test_graph_attachments.py  test_graph_builder_fallback.py  (+72 more)
universal_agentic_framework/: graph.py  main.py  server.py
universal_agentic_framework/caching/: __init__.py  backup.py  compression.py  decorators.py  eviction.py  manager.py  scheduler.py  vector_backend.py  warming.py
universal_agentic_framework/cli/: ingest.py  setup_init.py  steuermann.py
universal_agentic_framework/config/: __init__.py  loader.py  schemas.py  token_contract.py
universal_agentic_framework/crews/: __init__.py  analytics_crew.py  base.py  chaining.py  code_generation_crew.py  executor.py  planning_crew.py  research_crew.py
universal_agentic_framework/embeddings/: __init__.py  provider.py
universal_agentic_framework/heartbeat/: __init__.py  scheduler.py  task.py
universal_agentic_framework/ingestion/: __init__.py  chunker.py  service.py  validator.py
universal_agentic_framework/llm/: __init__.py  budget.py  factory.py  provider_registry.py
universal_agentic_framework/memory/: __init__.py  backend.py  factory.py  importance.py  linking.py  manager.py  mem0_backend.py  nodes.py  qdrant_backend.py  summarization.py
universal_agentic_framework/monitoring/: __init__.py  logging.py  metrics.py
universal_agentic_framework/orchestration/: checkpointing.py  crew_nodes.py  graph_builder.py  performance_nodes.py  procedural_node.py  (+1 more)
(+326 files in other folders)
