[tool.poetry]
name = "steuermann-ai"
version = "0.1"
description = "Template scaffold for Steuermann"
authors = ["Steuermann Maintainers"]
readme = "README.md"
packages = [{include = "universal_agentic_framework"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.0"
PyYAML = "^6.0"
structlog = "^24.0"
httpx = "^0.28.0"
litellm = "<1.83.14"

[tool.poetry.group.langgraph.dependencies]
langgraph = "^1.1.6"
langchain = "^1.2.15"
langchain-litellm = "^0.6.4"
crewai = "^1.14.1"
qdrant-client = "^1.11.0"
prometheus-client = "^0.19.0"
pycountry = ">=24.0.0"
mcp = {extras = ["cli"], version = "^1.26.0"}
fastapi = "^0.135.0"
uvicorn = "^0.35.0"
redis = "^5.0.0"
apscheduler = "^3.10.4"

[tool.poetry.group.fastapi.dependencies]
langchain = "^1.2.15"
fastapi = "^0.135.0"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9"
prometheus-client = "^0.19.0"
slowapi = "^0.1.9"
python-multipart = ">=0.0.9,<0.1.0"

[tool.poetry.group.ingestion.dependencies]
prometheus-client = "^0.19.0"
qdrant-client = "^1.11.0"
pypdf = "^5.1.0"
python-docx = "^1.2.0"
langdetect = "^1.0.9"
markdown = "^3.10"
watchdog = "^6.0.0"

[tool.poetry.scripts]
ingest = "universal_agentic_framework.cli.ingest:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: integration tests requiring external services (Qdrant, Ollama, etc.)",
    "slow: tests that take longer to run (e.g., 1000+ concurrent worker tests)",
    "benchmark: performance benchmark tests",
    "performance: performance-focused tests"
]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
