[tool.poetry]
name = "steuermann-ai"
version = "0.4.2"
description = "Template scaffold for Steuermann"
authors = ["Steuermann Maintainers"]
readme = "README.md"
packages = [{include = "universal_agentic_framework"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.0"
PyYAML = "^6.0"
structlog = "^26.0"
httpx = "^0.28.0"
litellm = ">=1.88.1,<2.0"
mem0ai = "^2.0.5"

[tool.poetry.group.langgraph.dependencies]
langgraph = "^1.2.0"
langgraph-checkpoint-postgres = ">=3.0,<3.1"
psycopg = {extras = ["binary"], version = ">=3.2.0,<4.0"}
psycopg-pool = ">=3.2.0,<4.0"
langchain = "^1.3.0"
langchain-litellm = "^0.6.6"
crewai = "^1.14.7"
qdrant-client = "^1.18.0"
prometheus-client = "^0.25.0"
pycountry = ">=24.0.0"
mcp = {extras = ["cli"], version = "^1.26.0"}
fastapi = "^0.136.0"
uvicorn = "^0.49.0"
redis = "^7.0.0"
apscheduler = "^3.10.4"
psycopg2-binary = "^2.9.12"
pillow = "^12.0"
pyzbar = "^0.1.9"

[tool.poetry.group.fastapi.dependencies]
langchain = "^1.3.0"
langchain-litellm = "^0.6.6"
fastapi = "^0.136.0"
uvicorn = "^0.49.0"
psycopg2-binary = "^2.9.12"
prometheus-client = "^0.25.0"
slowapi = "^0.1.9"
python-multipart = ">=0.0.9,<0.1.0"
pillow = "^12.0"

[tool.poetry.group.ingestion.dependencies]
prometheus-client = "^0.25.0"
qdrant-client = "^1.18.0"
pypdf = "^6.0.0"
python-docx = "^1.2.0"
langdetect = "^1.0.9"
markdown = "^3.10"
watchdog = "^6.0.0"

[tool.poetry.scripts]
steuermann = "universal_agentic_framework.cli.steuermann:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.4.0"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: integration tests requiring external services (Qdrant, Ollama, etc.)",
    "slow: tests that take longer to run (e.g., 1000+ concurrent worker tests)",
    "benchmark: performance benchmark tests",
    "performance: performance-focused tests"
]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
